# be-fast-api-training-trainee

./: AGENTS.md  README.md  course-map.html  course-mindmap.md  evaluation-rubric.md  pet-project-spec.md  resources.md  week-1-fundamentals.md  week-2-backend-core.md  week-3-advanced.md  week-4-pet-project.md
days/: day-03-http-rest.md  (+19 more)
journal/fastapi-hello-world/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  index-lab.sql  instruction-day-06.md  instruction-day-07.md  instruction-day-08.md  instruction-day-09.md  instruction-day-10.md  instruction-day-11.md  instruction.md  pyproject.toml  schema.sql  seed.sql  solution-day-07.md
journal/fastapi-hello-world/app/: __init__.py  config.py  db.py  deps.py  error_handlers.py  exceptions.py  logging_setup.py  main.py  middleware.py  redis.py  schemas.py  security.py
journal/fastapi-hello-world/app/models/: __init__.py  comment.py  post.py  user.py
journal/fastapi-hello-world/app/routes/: auth.py  echo.py  health.py  posts.py  users.py  version.py
journal/fastapi-hello-world/migrations/: env.py
journal/fastapi-hello-world/scripts/: create_tables.py
journal/fastapi-hello-world/terraform/: main.tf  outputs.tf  terraform.tfvars.example  user_data.sh  variables.tf
journal/fastapi-hello-world/tests/: __init__.py  conftest.py  test_auth.py  test_auth_e2e.py  test_auth_service_unit.py  test_echo.py  test_health.py  test_observability.py  test_post_service_integration.py  test_posts.py  test_user_service_integration.py  test_users.py  test_version.py
(+32 files in other folders)
