[project]
name = "hello-api"
version = "0.1.0"
description = "Structured FastAPI hello API project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.115.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "ruff>=0.12.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 88
target-version = "py312"
